<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lyMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/lblColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/lbl_color"
        android:textSize="16sp" />

    <RadioGroup
        android:id="@+id/rgColores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbRojo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_rojo" />

        <RadioButton
            android:id="@+id/rbVerde"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_verde" />

        <RadioButton
            android:id="@+id/rbAzul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/rb_azul" />
    </RadioGroup>

    <TextView
        android:id="@+id/lblEstilo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/lbl_estilo"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/cbNegrita"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:text="@string/cb_negrita" />

    <CheckBox
        android:id="@+id/cbCursiva"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginBottom="15dp"
        android:text="@string/cb_cursiva" />

    <TextView
        android:id="@+id/lblMostrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="Texto de prueba"
        android:textSize="48sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblOsucro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lbl_oscuro" />

        <Switch
            android:id="@+id/swOscuro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblInformacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lbl_informacion" />

        <Switch
            android:id="@+id/swInformacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>